Searchbar visibility fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,6 +58,7 @@ li {
 
 .menu li {
     padding: 5px 14px;
+    z-index: 50;
 }
 .menu .services:hover{
     position: relative;
@@ -86,7 +87,6 @@ li {
     padding: 0.2em  0.6em ;
     width: 8em;
     text-align: left;
-
 }
 
 .dropdown li:hover {
@@ -123,6 +123,7 @@ input[type=checkbox] {
         left: 0;
         text-align: center;
         padding: 16px 0;
+        z-index: 50;
     }
 
     .menu li:hover {
